--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zksync-token-approval",
-  "version": "1.0.0",
+  "version": "0.6.1'",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -11,17 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ethers": "^6.3.0",
-    "zksync": "^0.13.1",
-    "zksync-crypto": "^0.9.2"
+    "ethers": "^5.4.4",
+    "zksync": "0.6.1'",
+    "zksync-crypto": "^0.6.2"
   },
   "devDependencies": {
-    "browserify": "^17.0.0",
-    "lite-server": "^2.6.1",
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
-    "babelify": "^10.0.0",
+    "@babel/runtime": "^7.16.3",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "@babel/runtime": "^7.16.3"
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
+    "lite-server": "^2.6.1"
   }
 }
